Add Security to endpoint definitions in Swagger
